# easymltorch

./: .gitignore  README.md  pyproject.toml
easymltorch/: __init__.py  model.py  network.py
easymltorch/strategies/: __init__.py  policy.py
easymltorch/tests/: __init__.py  test_model_basic.py  test_policy_strategy.py
easymltorch/utils/: __init__.py  device.py
examples/: README.md  simple_training_loop.py
examples/binary_classifier/: README.md  environment.py  evaluate.py  train.py
